fix up sections on mobile

--- a/src/assets/css/components/comparison.css
+++ b/src/assets/css/components/comparison.css
@@ -24,6 +24,8 @@
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(var(--comparison-rows, 3), 1fr);
+    font-size: var(--text-medium);
+    position: relative;
 
     & > li {
       display: flex;
@@ -62,5 +64,26 @@
     background-size: contain;
     background-repeat: no-repeat;
     background-image: url("data:image/svg+xml,%3Csvg%20width%3D%2273%22%20height%3D%2230%22%20viewBox%3D%220%200%2073%2030%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%3Cg%20opacity%3D%220.5%22%3E%0A%3Cpath%20opacity%3D%220.8%22%20d%3D%22M73%2015.4334L51.25%2027.9907L51.25%202.87598L73%2015.4334Z%22%20fill%3D%22%231FCA51%22%2F%3E%0A%3Cpath%20opacity%3D%220.3%22%20d%3D%22M51%2015.4334L29.25%2027.9907L29.25%202.87598L51%2015.4334Z%22%20fill%3D%22%231FCA51%22%2F%3E%0A%3Cpath%20opacity%3D%220.1%22%20d%3D%22M29%2015.4334L7.25%2027.9907L7.25%202.87598L29%2015.4334Z%22%20fill%3D%22%2352607B%22%2F%3E%0A%3C%2Fg%3E%0A%3C%2Fsvg%3E%0A");
+
+    @media (max-width: 1024px) {
+      display: none;
+    }
+  }
+
+  @media (max-width: 1024px) {
+    > div:first-child > ul::after {
+      content: "";
+      display: block;
+      position: absolute;
+      height: 4rem;
+      position: absolute;
+      left: 50%;
+      bottom: -7rem;
+      width: var(--space-144);
+      transform: rotate(90deg) translateY(50%);
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-image: url("data:image/svg+xml,%3Csvg%20width%3D%2273%22%20height%3D%2230%22%20viewBox%3D%220%200%2073%2030%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%3Cg%20opacity%3D%220.5%22%3E%0A%3Cpath%20opacity%3D%220.8%22%20d%3D%22M73%2015.4334L51.25%2027.9907L51.25%202.87598L73%2015.4334Z%22%20fill%3D%22%231FCA51%22%2F%3E%0A%3Cpath%20opacity%3D%220.3%22%20d%3D%22M51%2015.4334L29.25%2027.9907L29.25%202.87598L51%2015.4334Z%22%20fill%3D%22%231FCA51%22%2F%3E%0A%3Cpath%20opacity%3D%220.1%22%20d%3D%22M29%2015.4334L7.25%2027.9907L7.25%202.87598L29%2015.4334Z%22%20fill%3D%22%2352607B%22%2F%3E%0A%3C%2Fg%3E%0A%3C%2Fsvg%3E%0A");
+    }
   }
 }
