--- a/src/assets/css/components/styled-ol.css
+++ b/src/assets/css/components/styled-ol.css
@@ -4,6 +4,7 @@ ol.styled {
   display: flex;
   flex-direction: column;
   gap: var(--space-24);
+  font-size: var(--text-medium);
 
   @media (max-width: 1024px) {
     gap: var(--space-16);
@@ -35,5 +36,15 @@ ol.styled {
     padding: 20px;
     font-size: 3.125rem;
     color: var(--ws-bright-green);
+  }
+
+  + p {
+    margin-top: var(--space-56);
+    padding-inline-start: 2em;
+
+    @media (max-width: 1024px) {
+      padding: 0;
+      text-align: center;
+    }
   }
 }
